Fixed extra white space on sides that padding caused.

--- a/less/app.less
+++ b/less/app.less
@@ -108,8 +108,6 @@ nav {
 	width: 100%;
 	margin-left: 0;
 	margin-right: 0;
-	padding-left: 0;
-	padding-right: 0;
 
 	@media (min-width: 1200px) {
 		max-width: 100%;
